# agent-framework-ep

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
openspec/: config.yaml
openspec/changes/add-pr-ci-checks/: tasks.md
openspec/changes/archive/2025-03-27-add-execute-script-abstract-method/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-03-30-fix-code-quality-issues/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-03-30-fix-ruff-lint-errors/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-03-30-github-actions-pypi-release/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-03-31-fix-streaming-reasoning-rc6/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-03-31-switch-to-chat-completions-api/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-30-add-pr-ci-checks/: design.md  proposal.md
openspec/specs/concurrent-access-protection/: spec.md
openspec/specs/docker-executor-refactor/: spec.md
openspec/specs/local-code-execution/: spec.md
openspec/specs/local-executor-refactor/: spec.md
openspec/specs/pr-ci-gate/: spec.md
openspec/specs/reasoning-content/: spec.md
openspec/specs/resource-lifecycle-management/: spec.md
openspec/specs/secure-command-execution/: spec.md
src/agent_framework_ep/: __init__.py
src/agent_framework_ep/code_executor/: AGENTS.md  __init__.py  base.py
src/agent_framework_ep/code_executor/docker/: __init__.py  executor.py
src/agent_framework_ep/code_executor/local/: __init__.py  executor.py
src/agent_framework_ep/openai_like/: AGENTS.md  __init__.py  _exceptions.py  _reasoning_content.py  _response_format.py
src/agent_framework_ep/skills_provider/: AGENTS.md  __init__.py  updatable_skills_provider.py
tests/: conftest.py
tests/cassettes/: deepseek_reasoning_stream.yaml
tests/code_executor/: test_base.py  test_docker_executor.py  test_local_executor.py
tests/openai_like/: __init__.py  test_deepseek_integration.py  test_exceptions.py  test_init.py  test_reasoning_content.py  test_response_format.py
tests/skills_provider/: __init__.py  test_updatable_skills_provider.py
(+9 files in other folders)
